@@ -8,6 +8,9 @@ package org.gridsuite.securityanalysis.server.service;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.powsybl.security.SecurityAnalysisProvider;
+import org.gridsuite.securityanalysis.server.computation.service.AbstractComputationService;
+import org.gridsuite.securityanalysis.server.computation.service.NotificationService;
+import org.gridsuite.securityanalysis.server.computation.service.UuidGeneratorService;
 import org.gridsuite.securityanalysis.server.dto.*;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
@@ -15,34 +18,21 @@ import org.springframework.stereotype.Service;
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 /**
  * @author Geoffroy Jamgotchian <geoffroy.jamgotchian at rte-france.com>
  * @author Franck Lecuyer <franck.lecuyer at rte-france.com>
  */
 @Service
-public class SecurityAnalysisService {
-    private final SecurityAnalysisResultService securityAnalysisResultService;
-
-    private final UuidGeneratorService uuidGeneratorService;
-
-    private final NotificationService notificationService;
-
-    private final ObjectMapper objectMapper;
-
-    private final String defaultProvider;
+public class SecurityAnalysisService extends AbstractComputationService<SecurityAnalysisRunContext, SecurityAnalysisResultService, SecurityAnalysisStatus> {
+    public static final String COMPUTATION_TYPE = "Security analysis";
 
     public SecurityAnalysisService(SecurityAnalysisResultService securityAnalysisResultService,
                                    UuidGeneratorService uuidGeneratorService,
                                    ObjectMapper objectMapper,
                                    NotificationService notificationService,
                                    @Value("${security-analysis.default-provider}") String defaultProvider) {
-        this.securityAnalysisResultService = Objects.requireNonNull(securityAnalysisResultService);
-        this.uuidGeneratorService = Objects.requireNonNull(uuidGeneratorService);
-        this.objectMapper = Objects.requireNonNull(objectMapper);
-        this.notificationService = Objects.requireNonNull(notificationService);
-        this.defaultProvider = Objects.requireNonNull(defaultProvider);
+        super(notificationService, securityAnalysisResultService, objectMapper, uuidGeneratorService, defaultProvider);
     }
 
     public UUID runAndSaveResult(SecurityAnalysisRunContext runContext) {
@@ -50,38 +40,14 @@ public class SecurityAnalysisService {
         var resultUuid = uuidGeneratorService.generate();
         // update status to running status
         setStatus(List.of(resultUuid), SecurityAnalysisStatus.RUNNING);
-        notificationService.emitRunAnalysisMessage(new SecurityAnalysisResultContext(resultUuid, runContext).toMessage(objectMapper));
+        notificationService.sendRunMessage(new SecurityAnalysisResultContext(resultUuid, runContext).toMessage(objectMapper));
 
         return resultUuid;
-    }
-
-    public void deleteResult(UUID resultUuid) {
-        securityAnalysisResultService.delete(resultUuid);
-    }
-
-    public void deleteResults() {
-        securityAnalysisResultService.deleteAll();
-    }
-
-    public SecurityAnalysisStatus getStatus(UUID resultUuid) {
-        return securityAnalysisResultService.findStatus(resultUuid);
-    }
-
-    public void setStatus(List<UUID> resultUuids, SecurityAnalysisStatus status) {
-        securityAnalysisResultService.insertStatus(resultUuids, status);
-    }
-
-    public void stop(UUID resultUuid, String receiver) {
-        notificationService.emitCancelAnalysisMessage(new SecurityAnalysisCancelContext(resultUuid, receiver).toMessage());
     }
 
     public List<String> getProviders() {
         return SecurityAnalysisProvider.findAll().stream()
                 .map(SecurityAnalysisProvider::getName)
-                .collect(Collectors.toList());
-    }
-
-    public String getDefaultProvider() {
-        return defaultProvider;
+                .toList();
     }
 }
